--- a/front/src/styles/_variables.scss
+++ b/front/src/styles/_variables.scss
@@ -54,3 +54,6 @@ $line-height-normal: 1.5;
 $border-radius-sm: 4px;
 $border-radius-md: 8px;
 $border-radius-lg: 12px; 
+
+// Mobile breakpoint
+$mobile-breakpoint: 768px;
