--- a/front/src/styles/styles.scss
+++ b/front/src/styles/styles.scss
@@ -63,50 +63,6 @@ h3, .h3 {
   }
 }
 
-// Écraser les styles de typographie d'Angular Material
-.mat-typography {
-  h1, .mat-h1, .mat-headline-1 {
-    font-size: $font-size-h1 !important;
-    font-weight: $font-weight-semibold !important;
-    margin-bottom: $spacing-lg !important;
-  }
-
-  h2, .mat-h2, .mat-headline-2 {
-    font-size: $font-size-h2 !important;
-    font-weight: $font-weight-regular !important;
-    margin-bottom: $spacing-md !important;
-  }
-
-  h3, .mat-h3, .mat-headline-3 {
-    font-size: $font-size-h3 !important;
-    font-weight: $font-weight-semibold !important;
-    margin-bottom: $spacing-sm !important;
-  }
-}
-
-// S'assurer que la police est appliquée partout
-.mat-typography,
-.mat-h1, .mat-headline-1,
-.mat-h2, .mat-headline-2,
-.mat-h3, .mat-headline-3,
-.mat-h4, .mat-headline-4,
-.mat-h5, .mat-headline-5,
-.mat-h6, .mat-headline-6,
-.mat-subtitle-1,
-.mat-subtitle-2,
-.mat-body, .mat-body-1,
-.mat-body-2,
-.mat-caption,
-.mat-button, .mat-raised-button, .mat-icon-button, .mat-stroked-button,
-.mat-button-toggle,
-.mat-card,
-.mat-chip,
-.mat-tab-group,
-.mat-paginator,
-.mat-select {
-  font-family: $font-family !important;
-}
-
 // Styles des boutons
 button {
   &.primary {
@@ -130,5 +86,40 @@ button {
       background-color: $primary-light;
       cursor: not-allowed;
     }
+  }
+}
+
+// Styles des formulaires
+form {
+  display: flex;
+  flex-direction: column;
+  gap: $spacing-md;
+  width: 100%;
+  max-width: 600px;
+  margin: 0 auto;
+  padding: $spacing-md;
+
+  mat-form-field {
+    width: 100%;
+  }
+}
+
+// Styles des champs de formulaire Material
+.mat-form-field-appearance-outline {
+  .mat-form-field-outline {
+    color: $primary !important;
+  }
+
+  .mat-form-field-outline-thick {
+    color: $primary !important;
+  }
+
+  .mat-form-field-flex {
+    background-color: $background-white;
+  }
+
+  textarea.mat-input-element {
+    min-height: 150px;
+    resize: vertical;
   }
 } 
