--- a/front/src/app/pages/auth/register/register.component.html
+++ b/front/src/app/pages/auth/register/register.component.html
@@ -7,25 +7,39 @@
         <div class="input-group">
           <label for="userName">Nom d'utilisateur</label>
           <input formControlName="name"
-                 id="userName">
+                 id="userName"
+                 [class.error]="form.controls.name.invalid && form.controls.name.touched">
+          <p *ngIf="form.controls.name.errors?.['required'] && form.controls.name.touched" class="error-message">
+            {{ ERROR_MESSAGES.AUTH.NAME_REQUIRED }}
+          </p>
         </div>
         <label for="useremail">Adresse e-mail</label>
         <input formControlName="email"
-               id="useremail">
+               id="useremail"
+               [class.error]="form.controls.email.invalid && form.controls.email.touched">
+        <p *ngIf="form.controls.email.errors?.['required'] && form.controls.email.touched" class="error-message">
+          {{ ERROR_MESSAGES.AUTH.EMAIL_INVALID }}
+        </p>
+        <p *ngIf="form.controls.email.errors?.['email'] && form.controls.email.touched" class="error-message">
+          {{ ERROR_MESSAGES.AUTH.EMAIL_INVALID }}
+        </p>
       </div>
       <div class="input-group">
         <label for="userpassword">Mot de passe</label>
-        <input  type="password"
+        <input type="password"
                formControlName="password"
                id="userpassword"
-               [class.error]="form.controls.password.invalid">
-        <p *ngIf="form.controls.password.errors?.['pattern']" class="error-message">
-          Le mot de passe doit respecter le format requis.
+               [class.error]="form.controls.password.invalid && form.controls.password.touched">
+        <p *ngIf="form.controls.password.errors?.['required'] && form.controls.password.touched" class="error-message">
+          {{ ERROR_MESSAGES.AUTH.PASSWORD_REQUIRED }}
+        </p>
+        <p *ngIf="form.controls.password.errors?.['pattern'] && form.controls.password.touched" class="error-message">
+          {{ ERROR_MESSAGES.AUTH.PASSWORD_INVALID }}
         </p>
       </div>
       <div class="submit-button">
-        <p *ngIf="onError" class="error">An error occurred</p>
-        <button mat-flat-button color="primary" type="submit" [disabled]="form.invalid || this.isSigningUp">S'inscrire</button>
+        <p *ngIf="onError" class="error">{{ ERROR_MESSAGES.AUTH.REGISTER_ERROR }}</p>
+        <button mat-flat-button color="primary" type="submit" [disabled]="form.invalid || isLoading">S'inscrire</button>
       </div>
     </form>
   </div>
