--- a/front/src/app/components/header/navbar/navbar.component.scss
+++ b/front/src/app/components/header/navbar/navbar.component.scss
@@ -1,123 +1,175 @@
+@import '../../../../styles/variables';
+
 .navbar {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    background-color: white;
-    width: 100%;
-  }
-  
-  .logo {
-    display: block;
-    height: 75px; 
-    margin-left: 30px;
-  }
-  
-  .profile-icon {
-    width: 50px;
-    height: 50px;
-  }
-  
+  background-color: $background-light;
+  padding: $spacing-md;
+  width: 100%;
+
   .menu-container {
+    max-width: 1200px;
+    margin: 0 auto;
     display: flex;
-    flex-direction: row;
-    justify-content: flex-end; 
-    width: 100%;
-    margin-right: 30px;
+    justify-content: center;
+    align-items: center;
+    gap: $spacing-xl;
   }
-  
+
   .menu {
     display: flex;
-    list-style: none; 
-    padding: 0;
+    list-style: none;
     margin: 0;
-  }
-  
-  .menu li {
-    padding: 0 10px; 
-  }
-  
-  .menu a {
-    float: left;
-    color: black;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-  }
-  
-  .menu a:hover {
-    font-weight: bold;
-    color: black;
-  }
-  
-  .menu a.active {
-    color: blue;
-    text-decoration: none;
-  }
-  
-  .menu a:not(.active):hover {
-    text-decoration: underline;
-  }
-  
-  a img:hover {
-    opacity: 0.8;
-  }
-  
-  @media screen and (max-width: 768px) {
-    .navbar {
-      position: fixed;
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-start;
-      right: 0;
-      width: 150px; 
-      height: 100%;
-      border: 1px solid black;
-      padding: 0;
-      z-index: 1000;
+    padding: 0;
+    gap: $spacing-lg;
+    justify-content: center;
+    align-items: center;
+
+    a {
+      color: #666666;
+      text-decoration: none;
+      font-size: 14px;
+      font-weight: 500;
+      transition: all 0.2s ease;
+      text-align: center;
+
+      &:hover {
+        color: #7763C5;
+      }
+
+      &.active {
+        color: #7763C5;
+        font-weight: 600;
+      }
+
+      &.logout-link {
+        color: $error;
+        
+        &:hover {
+          color: darken($error, 10%);
+        }
+      }
     }
-  
-    .menu-container {
-      position: fixed;
-      display: flex;
-      justify-content: flex-end; 
-      top: 50px;
-    }
-  
-    .menu {
-      display: flex; 
-      flex-direction: column;
-    }
-  
-    .logo {
-      display: none;
-    }
-  
-    .logo-top-left {
-      display: block;
-      height: 50px;
-      width: 70px;
-      margin-left: 30px;
-    }
-  
+  }
+
+  .user-actions {
+    display: flex;
+    align-items: center;
+    gap: $spacing-md;
+  }
+
+  .user-profile {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: $spacing-sm;
+    border-radius: 50%;
+    transition: all 0.2s ease;
+    background-color: rgba(#666666, 0.1);
+    width: 40px;
+    height: 40px;
+    color: #666666;
+
     .profile-icon {
-      display: block;
-      position: fixed;
-      bottom: 10px;
-      right: 10px;
+      width: 20px;
+      height: 20px;
     }
-  
-    .toggle-icon {
-      display: block;
-      position: fixed;
-      top: 10px;
-      right: 10px;
-      z-index: 1000;
-      cursor: pointer;
-      color: black;
-      font-size: 36px;
+
+    &.active {
+      background-color: rgba(#7763C5, 0.1);
+      border: 2px solid #7763C5;
+      color: #7763C5;
     }
   }
+
+  .logout-button {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    padding: $spacing-xs $spacing-sm;
+    border: none;
+    border-radius: $border-radius-sm;
+    background: none;
+    color: $text-secondary;
+    font-size: $font-size-base;
+    font-weight: $font-weight-medium;
+    cursor: pointer;
+    transition: all 0.2s ease;
+
+    &:hover {
+      color: $error;
+      background: none;
+    }
+
+    &:focus {
+      outline: none;
+      box-shadow: 0 0 0 2px rgba($error, 0.2);
+    }
+  }
+}
+
+.toggle-icon {
+  display: none;
+}
+
+@media screen and (max-width: $tablet) {
+  .navbar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 80%;
+    max-width: 300px;
+    padding-top: $spacing-xl;
+    transform: translateX(-100%);
+    transition: transform 0.3s ease;
+    background-color: $background-light;
+    z-index: 1000;
+
+    &.show {
+      transform: translateX(0);
+    }
+
+    .menu-container {
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-start;
+      gap: $spacing-lg;
+      text-align: center;
+    }
+
+    .menu {
+      flex-direction: column;
+      width: 100%;
+      text-align: center;
+      
+      a {
+        width: 100%;
+        padding: $spacing-sm;
+      }
+    }
+
+    .user-actions {
+      flex-direction: column;
+      width: 100%;
+      align-items: center;
+      gap: $spacing-md;
+      margin: $spacing-md 0;
+    }
+
+    .user-profile {
+      margin: $spacing-xs 0;
+    }
+  }
+
+  .toggle-icon {
+    display: block;
+    cursor: pointer;
+    font-size: $font-size-h2;
+    position: fixed;
+    top: $spacing-md;
+    right: $spacing-md;
+    z-index: 1001;
+  }
+}
   
   
   
