--- a/front/src/app/pages/posts/post-create/post-create.component.scss
+++ b/front/src/app/pages/posts/post-create/post-create.component.scss
@@ -47,21 +47,6 @@
   padding: $spacing-xl;
   min-height: calc(100vh - 64px);
 
-  // &__back-link {
-  //   position: absolute;
-  //   left: 2rem;
-  //   top: 2rem;
-  //   font-size: 2rem;
-  //   text-decoration: none;
-  //   color: $text-color;
-  //   transition: color 0.2s ease;
-
-  //   &:hover {
-  //     color: $primary;
-  //   }
-  // }
-
-
   &__form {
     display: flex;
     flex-direction: column;
@@ -139,6 +124,33 @@
         cursor: not-allowed;
       }
     }
+  }
+}
+
+// Personnalisation des champs Material
+::ng-deep {
+  .mat-mdc-form-field {
+    width: 100%;
+  }
+
+  .mdc-text-field--outlined {
+    --mdc-outlined-text-field-outline-color: #673ab7;
+    --mdc-outlined-text-field-hover-outline-color: #673ab7;
+    --mdc-outlined-text-field-focus-outline-color: #673ab7;
+    --mdc-outlined-text-field-label-text-color: rgba(0, 0, 0, 0.6);
+    --mdc-outlined-text-field-focus-label-text-color: #673ab7;
+  }
+
+  .mdc-text-field--outlined.mdc-text-field--invalid {
+    --mdc-outlined-text-field-outline-color: #{$error};
+    --mdc-outlined-text-field-hover-outline-color: #{$error};
+    --mdc-outlined-text-field-focus-outline-color: #{$error};
+    --mdc-outlined-text-field-label-text-color: #{$error};
+    --mdc-outlined-text-field-focus-label-text-color: #{$error};
+  }
+
+  .mat-mdc-form-field-error {
+    color: $error;
   }
 }
 
