--- a/front/src/app/pages/topics/topic-card/topic-card.component.html
+++ b/front/src/app/pages/topics/topic-card/topic-card.component.html
@@ -1,4 +1,4 @@
-MatButton<div class="topic-card">
+<div class="topic-card">
   <h3 class="topic-card__title">{{ title }}</h3>
   
   <div class="topic-card__content">
