--- a/front/src/app/pages/user/user.component.html
+++ b/front/src/app/pages/user/user.component.html
@@ -1,76 +1,75 @@
 <div class="page-container">
   <div class="user page-container__main">
-  <h2 class="user__title">Profil utilisateur</h2>
-  
-  <form [formGroup]="form" (ngSubmit)="onSubmit()" class="user__form">
-    <div class="user__form-fields">
-      <div class="user__form-group">
-        <input formControlName="name" placeholder="Nouveau nom d'utilisateur">
-        <p *ngIf="nameValidationMessage" class="user__error">
-          {{ nameValidationMessage }}
-        </p>
-      </div>
+    <h1 class="user__title">Profil utilisateur</h1>
+    
+    <form [formGroup]="form" (ngSubmit)="onSubmit()" class="user__form">
+      <div class="user__form-fields">
+        <mat-form-field appearance="outline" class="user__form-field">
+          <input matInput formControlName="name" placeholder="Username">
+          <mat-error *ngIf="nameValidationMessage">
+            {{ nameValidationMessage }}
+          </mat-error>
+        </mat-form-field>
 
-      <div class="user__form-group">
-        <input formControlName="email" placeholder="Nouvelle adresse email">
-        <p *ngIf="emailValidationMessage" class="user__error">
-          {{ emailValidationMessage }}
-        </p>
-      </div>
+        <mat-form-field appearance="outline" class="user__form-field">
+          <input matInput formControlName="email" placeholder="email@email.fr" type="email">
+          <mat-error *ngIf="emailValidationMessage">
+            {{ emailValidationMessage }}
+          </mat-error>
+        </mat-form-field>
 
-      <div class="user__form-submit">
-        <p *ngIf="hasError" class="user__error">Une erreur est survenue</p>
-        <button 
-          mat-flat-button 
-          color="primary" 
-          type="submit" 
-          [disabled]="form.invalid || isLoading"
-          class="user__button">
-          Mettre à jour le profil
-        </button>
-      </div>
-    </div>
-  </form>
+        <mat-form-field appearance="outline" class="user__form-field">
+          <input matInput type="password" placeholder="Mot de passe">
+        </mat-form-field>
 
-  <div class="user__logout">
-    <a (click)="logout()">Se déconnecter</a>
-  </div>
-
-  <hr class="user__divider">
-
-  <h2 class="user__subtitle">Abonnements</h2>
-
-  @if (isLoading) {
-    <div class="user__loading">
-      <p>Chargement des abonnements...</p>
-      <app-loader></app-loader>
-    </div>
-  }
-
-  @if (onErrorFetchingSubscriptions) {
-    <p class="user__error">
-      Une erreur est survenue lors de la récupération des abonnements...
-    </p>
-  } @else if (!hasSubscriptions) {
-    <p class="user__empty">
-      Aucun abonnement...
-    </p>
-  } @else {
-    <div class="user__grid">
-      @for (topic of userSubscribedTopicsArray; track topic.id) {
-        <div class="user__item">
-          <app-topic-card 
-            [id]="topic.id"
-            [title]="topic.title"
-            [description]="topic.description"
-            [isSubscribed]="topic.isSubscribed"
-            [isSubscribeCase]="false"
-            (onSubscribe)="unsubscribeFromTopic(topic.id)">
-          </app-topic-card>
+        <div class="user__form-submit">
+          <button 
+            mat-flat-button 
+            color="primary" 
+            type="submit" 
+            [disabled]="form.invalid || isLoading"
+            class="user__button">
+            Sauvegarder
+          </button>
         </div>
-      }
-    </div>
-  }
+      </div>
+    </form>
+
+    <hr class="user__divider">
+
+    <h1 class="user__subtitle">Abonnements</h1>
+
+    @if (isLoading) {
+      <div class="user__loading">
+        <app-loader></app-loader>
+      </div>
+    }
+
+    @if (onErrorFetchingSubscriptions) {
+      <p class="user__error">
+        Une erreur est survenue lors de la récupération des abonnements...
+      </p>
+    } @else if (!hasSubscriptions) {
+      <p class="user__empty">
+        Aucun abonnement...
+      </p>
+    } @else {
+      <div class="user__grid">
+        @for (topic of userSubscribedTopicsArray; track topic.id) {
+          <div class="user__item">
+            <app-topic-card 
+              [id]="topic.id"
+              [title]="topic.title"
+              [description]="topic.description"
+              [isSubscribed]="topic.isSubscribed"
+              [isSubscribeCase]="false"
+              [disableButton]="false"
+              (onSubscribe)="unsubscribeFromTopic(topic.id)">
+            </app-topic-card>
+          </div>
+        }
+      </div>
+    }
   </div>
 </div>
   
