--- a/front/src/app/pages/home/home.component.scss
+++ b/front/src/app/pages/home/home.component.scss
@@ -1,45 +1,54 @@
-.image {
-  width: 60%; /* Adjust width for mobile */
-  max-width: 500px; /* Set a maximum width */
-  height: auto; /* Allow height to adjust proportionally */
-  margin-bottom: 2rem;
-}
-
-.button-container {
-  display: flex;
-  gap: 2rem;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  max-width: 600px;
-}
+@import '../../../styles/variables';
 
 .container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  min-height: 100vh;
-  padding: 2rem;
-  gap: 120px;
+  width: 100%;
+  height: 100vh;
+  padding: $spacing-xl;
+
+  @media screen and (max-width: $mobile) {
+    padding: 0 $spacing-lg;
+  }
 }
 
-@media screen and (max-width: 768px) {
-  .container {
-    padding: 1rem;
-    gap: 1.5rem;
-  }
+.image {
+  width: 40%;
+  max-width: 400px;
+  margin-top: 15vh;
 
-  .image {
-    width: 80%;
-    margin-bottom: 1.5rem;
+  @media screen and (max-width: $mobile) {
+    width: 76.5%;
+    margin-top: 10vh;
   }
+}
 
-  .button-container {
+.button-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: $spacing-xl;
+  width: 100%;
+  margin-top: auto;
+  margin-bottom: 30vh;
+
+  @media screen and (max-width: $mobile) {
     flex-direction: column;
-    gap: 1rem;
-    width: 100%;
-    max-width: 300px;
+    gap: 24px;
+    max-width: 100%;
+    margin-top: 15vh;
+    margin-bottom: auto;
+  }
+
+  app-btn {
+    width: auto;
+    min-width: 200px;
+
+    @media screen and (max-width: $mobile) {
+      width: 100%;
+    }
   }
 }
 
