--- a/front/src/app/pages/home/home.component.html
+++ b/front/src/app/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <img src="/assets/logo_p6.png" alt="Your Image" class="image">
+  <img src="/assets/logo.svg" alt="logo" class="image">
   <div class="button-container">
     <app-btn
       text="Se connecter"
