--- a/front/src/app/pages/posts/post-detail/post-detail.component.scss
+++ b/front/src/app/pages/posts/post-detail/post-detail.component.scss
@@ -1,7 +1,7 @@
 @import '../../../../styles/variables';
 
 .post-detail {
-  background-color: $background-white;
+  background-color: $background-light;
   border-radius: $border-radius-md;
   padding: $spacing-lg;
   margin: $spacing-md 0;
