--- a/front/src/styles/styles.scss
+++ b/front/src/styles/styles.scss
@@ -123,7 +123,7 @@ form {
   }
 
   .mat-form-field-flex {
-    background-color: $background-white;
+    background-color: $background-light;
   }
 
   textarea.mat-input-element {
