--- a/front/src/app/components/backlink/backlink.component.scss
+++ b/front/src/app/components/backlink/backlink.component.scss
@@ -1,22 +1,32 @@
 @import '../../../styles/variables';
 
 .backlink {
+  position: absolute;
+  top: 15%;
+  left: 2%;
   background: none;
   border: none;
   cursor: pointer;
-  padding: $spacing-sm;
+  padding: 0;
   transition: transform 0.2s ease;
   display: flex;
   align-items: center;
   justify-content: center;
+  width: 40px;
+  height: 40px;
+  z-index: 2;
+
+  @media screen and (max-width: $tablet) {
+    top: 5%;
+  }
 
   &:hover {
     transform: scale(1.1);
   }
 
   &__icon {
-    width: 32px;
-    height: 32px;
+    width: 40px;
+    height: 40px;
     filter: brightness(0);
   }
 } 
