--- a/front/src/app/pages/auth/login/login.component.html
+++ b/front/src/app/pages/auth/login/login.component.html
@@ -1,36 +1,31 @@
-<div class="page-container">
-  <div class="login page-container__main">
-    <div class="login__container">
-      <h1 class="login__title">Se connecter</h1>
+<app-auth>
+  <div class="login">
+    <h1>Se connecter</h1>
 
-      <form [formGroup]="loginForm" (ngSubmit)="submit()" class="login__form">
-        <div class="login__field">
-          <label for="email" class="login__label">Email</label>
-          <input
-            type="email"
-            id="email"
-            formControlName="email"
-            class="login__input"
-            >
-        </div>
+    <form [formGroup]="loginForm" (ngSubmit)="submit()">
+      <div class="input-group">
+        <mat-form-field appearance="outline">
+          <mat-label>E-mail ou nom d'utilisateur</mat-label>
+          <input matInput formControlName="email" required>
+        </mat-form-field>
+      </div>
 
-        <div class="login__field">
-          <label for="password" class="login__label">Mot de passe</label>
-          <input
-            type="password"
-            id="password"
-            formControlName="password"
-            class="login__input"
-            >
-        </div>
+      <div class="input-group">
+        <mat-form-field appearance="outline">
+          <mat-label>Mot de passe</mat-label>
+          <input matInput type="password" formControlName="password" required>
+        </mat-form-field>
+      </div>
 
+      <div class="submit-button">
+        <p *ngIf="onError" class="error">{{ ERROR_MESSAGES.AUTH.LOGIN_ERROR }}</p>
         <app-btn
           text="Se connecter"
           type="cta"
           [disabled]="loginForm.invalid || isLoading"
           (btnClick)="submit()">
         </app-btn>
-      </form>
-    </div>
+      </div>
+    </form>
   </div>
-</div>
+</app-auth>
