--- a/front/src/app/pages/posts/post-create/post-create.component.scss
+++ b/front/src/app/pages/posts/post-create/post-create.component.scss
@@ -154,7 +154,7 @@
   }
 }
 
-@media screen and (max-width: $mobile-breakpoint) {
+@media screen and (max-width: $tablet) {
   .post-create {
     padding: $spacing-md;
 
@@ -163,5 +163,4 @@
     }
   }
 }
-  
-  
+
