--- a/front/src/app/pages/posts/post-detail/comments/comment-card/comment-card.component.scss
+++ b/front/src/app/pages/posts/post-detail/comments/comment-card/comment-card.component.scss
@@ -5,7 +5,7 @@
   display: flex;
   gap: $spacing-lg;
   padding: $spacing-md; 
-  background-color: $background-white;
+  background-color: $background-light;
   justify-content: space-between;
 
   &__username, &__date {
