--- a/front/src/app/pages/posts/post-list/post-list.component.scss
+++ b/front/src/app/pages/posts/post-list/post-list.component.scss
@@ -94,7 +94,7 @@ $post-list-button-hover: rgba(0, 0, 0, 0.05);
       color: #2196f3;
     }
 
-    @media (max-width: $mobile-breakpoint) {
+    @media (max-width: $tablet) {
       justify-content: center;
     }
   }
@@ -119,7 +119,7 @@ $post-list-button-hover: rgba(0, 0, 0, 0.05);
 }
 
 // Responsive
-@media (max-width: $mobile-breakpoint) {
+@media (max-width: $tablet) {
   .post-list {
     &__create-button {
       justify-content: center;
