--- a/front/src/app/pages/auth/register/register.component.html
+++ b/front/src/app/pages/auth/register/register.component.html
@@ -1,9 +1,9 @@
 <app-auth>
-  <div class="register">
-    <h1>Inscription</h1>
-    <form [formGroup]="form" (ngSubmit)="submit()">
-      <div class="input-group">
-        <div class="input-group">
+  <div class="auth">
+    <h1 class="auth__title">Inscription</h1>
+    <form [formGroup]="form" (ngSubmit)="submit()" class="auth__form">
+      <div class="auth__input-group">
+        <div class="auth__input-group">
           <mat-form-field appearance="outline">
             <mat-label>Nom d'utilisateur</mat-label>
             <input matInput formControlName="name"
@@ -25,7 +25,7 @@
           </mat-error>
         </mat-form-field>
       </div>
-      <div class="input-group">
+      <div class="auth__input-group">
         <mat-form-field appearance="outline">
           <mat-label>Mot de passe</mat-label>
           <input matInput type="password"
@@ -39,8 +39,8 @@
           </mat-error>
         </mat-form-field>
       </div>
-      <div class="submit-button">
-        <p *ngIf="onError" class="error">{{ ERROR_MESSAGES.AUTH.REGISTER_ERROR }}</p>
+      <div class="auth__submit">
+        <p *ngIf="onError" class="auth__error">{{ ERROR_MESSAGES.AUTH.REGISTER_ERROR }}</p>
         <app-btn
           text="S'inscrire"
           type="cta"
