--- a/front/src/app/pages/posts/post-detail/post-detail.component.html
+++ b/front/src/app/pages/posts/post-detail/post-detail.component.html
@@ -7,9 +7,11 @@
     @else {
       <div class="post-detail__content">
         <div class="post-detail__info">
-          <h2>{{formattedDate}}</h2>
-          <h2>Auteur : {{postData?.author}}</h2>
-          <h2>Thème : {{postData?.topicName}}</h2>
+          <div class="post-detail__title">
+            <h2>{{formattedDate}}</h2>
+            <h2>{{postData?.author}}</h2>
+          </div>
+            <h2>{{postData?.topicName}}</h2>
         </div>
         <div class="post-detail__description">
           <p>{{postData?.description}}</p>
