--- a/front/src/app/pages/user/user.component.html
+++ b/front/src/app/pages/user/user.component.html
@@ -34,8 +34,11 @@
         </div>
       </div>
     </form>
+  </div>
 
     <hr class="user__divider">
+
+    <div class="topics page-container__main">
 
     <h1 class="user__subtitle">Abonnements</h1>
 
@@ -72,4 +75,3 @@
     }
   </div>
 </div>
-  
