--- a/front/src/app/pages/posts/post-detail/post-detail.component.scss
+++ b/front/src/app/pages/posts/post-detail/post-detail.component.scss
@@ -21,7 +21,8 @@
 
   &__info {
     display: flex;
-    justify-content: space-around;
+    width: 50%;
+    justify-content: space-between;
     gap: 0.5rem;
   }
 
@@ -48,6 +49,14 @@
     text-align: center;
     margin: $spacing-md 0;
   }
+
+  &__title {
+    display: flex;
+    width: 66%;
+    justify-content: space-between;
+    align-items: flex-start;
+    gap: $spacing-xl;
+  }
 }
 
 @media screen and (max-width: 768px) {
@@ -59,8 +68,13 @@
       top: 1rem;
     }
 
+    &__info {
+      width: 100%;
+    }
+
     &__title {
-      font-size: 1.5rem;
+      justify-content: space-between;
+      width: 100%;
     }
 
     &__info {
