--- a/front/src/app/pages/topics/topic-card/topic-card.component.scss
+++ b/front/src/app/pages/topics/topic-card/topic-card.component.scss
@@ -1,7 +1,7 @@
 @import '../../../../styles/variables';
 
 .topic-card {
-  background-color: $background-light;
+  background-color: $background-grey;
   border-radius: $border-radius-lg;
   padding: $spacing-lg $spacing-lg;
   margin: $spacing-sm;
