--- a/front/src/app/pages/user/user.component.scss
+++ b/front/src/app/pages/user/user.component.scss
@@ -92,11 +92,6 @@
   }
 
   &__grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    gap: $spacing-lg;
-    margin-top: $spacing-lg;
-
     ::ng-deep {
       .topic-card__button {
         background-color: $primary !important;
@@ -112,6 +107,21 @@
 
   &__item {
     width: 100%;
+  }
+
+  &__topics {
+    display: block;
+    margin-top: $spacing-md;
+
+    ::ng-deep {
+      .topics__grid {
+        @extend .user__grid;
+      }
+
+      .topics__item {
+        @extend .user__item;
+      }
+    }
   }
 }
 
